--- a/resources/sass/_variables.scss
+++ b/resources/sass/_variables.scss
@@ -5,4 +5,4 @@ $status-user-reservation: #B2CCE5;
 $status-user-confirmation: #5841b0;
 $status-user-booking: #365F8C;
 $status-block: #ff6600;
-$status-closing: #BEBEBE;
+$status-closing: rgba(235, 235, 235);
