--- a/resources/sass/main.scss
+++ b/resources/sass/main.scss
@@ -32,15 +32,20 @@ body {
 .fc-nonbusiness { background-color: $status-closing; cursor: not-allowed; }
 
 /* Background Events: Closings */
-// FIXME
+// https://css-tricks.com/stripes-css/
 .fc-bg-event {
-    background-color: $status-closing !important;
+    //background-color: $status-closing !important;
+    color: black;
     cursor: not-allowed;
+    background-color: #fff;
     opacity: 100% !important;
-    background-image:
-        linear-gradient(45deg, $status-closing 50%, blue 50%) !important;
-        //repeating-linear-gradient(transparent, transparent 10px, white 10px, white 12px),
-        //repeating-linear-gradient(to right, transparent, transparent 10px, white 10px, white 32px) !important;
+    background: repeating-linear-gradient(
+            45deg,
+            rgba(245, 245, 245),
+            rgba(245, 245, 245) 10px,
+            rgba(235, 235, 235) 10px,
+            rgba(235, 235, 235) 20px
+    ) !important;
 }
 
 /* Room header columns */
@@ -63,11 +68,6 @@ div#status-legend {
 
     span {
         flex-wrap: wrap;
-        /*
-        border-width: 1px;
-        border-left-width: 30px;
-        padding-left: 10px;
-         */
         display: inline-block;
         &.reservation { background-color: $status-reservation; color: #fff;  }
         &.booking { background-color: $status-booking; }
