--- a/resources/sass/_variables.scss
+++ b/resources/sass/_variables.scss
@@ -2,8 +2,7 @@
 $status-reservation: #ff6600;
 $status-booking: #25d908;
 $status-user-reservation: #B2CCE5;
-$status-user-to-verify: #610000;
-$status-user-verified: #5841b0;
+$status-user-to-verify: #5841b0;
 $status-user-booking: #365F8C;
 $status-block: #ff6600;
 $status-closing: rgba(235, 235, 235);
