--- a/resources/sass/_variables.scss
+++ b/resources/sass/_variables.scss
@@ -1,8 +1,13 @@
 // Status Colors
-$status-reservation: #ff6600;
-$status-booking: #25d908;
+$status-reservation: #00a6b3;
+$status-booking: #8F13FC;
 $status-user-reservation: #B2CCE5;
-$status-user-to-verify: #5841b0;
-$status-user-booking: #365F8C;
-$status-block: #ff6600;
-$status-closing: rgba(235, 235, 235);
+$status-user-to-verify: #47CB3F;
+$status-user-booking: #ff8000;
+$status-block: #CE1E17;
+$status-closing: #939393;
+
+/*
+open color.fc .fc-toolbar.fc-header-toolbar
+#22a15c
+*/
