--- a/resources/sass/main.scss
+++ b/resources/sass/main.scss
@@ -10,6 +10,7 @@
     outline: 0 #336699 solid;
 }
 
+
 body {
     font-family: 'Open Sans', sans-serif;
 }
@@ -86,3 +87,21 @@ div#status-legend {
 .fc-timegrid-slots tr:nth-child(even) {
     background-color: #f6f6f6;
 }
+
+#calendar_sidebar_wrapper{
+    display: block;
+    width: 100%;
+}
+
+
+/*calendar*/
+#calendar{
+    display: block;
+    width: 100%;
+}
+
+nav{
+    z-index: 9999;
+}
+
+
