[#175] Fix burger menu in mobile navigation

--- a/resources/sass/_variables.scss
+++ b/resources/sass/_variables.scss
@@ -1,9 +1,9 @@
 // Status Colors
-$status-reservation: #00a6b3;
+$status-reservation: #00A6B3;
 $status-booking: #8F13FC;
 $status-user-reservation: #B2CCE5;
 $status-user-to-verify: #47CB3F;
-$status-user-booking: #ff8000;
+$status-user-booking: #FF8000;
 $status-block: #CE1E17;
 $status-closing: #939393;
 
