--- a/resources/sass/main.scss
+++ b/resources/sass/main.scss
@@ -7,9 +7,20 @@
     outline: 0 #336699 solid;
 }
 
+html{
+    height: 100%;
+}
+
 body {
     font-family: "Open Sans", sans-serif;
     background-color: #F8F8F8;
+    min-height: 100%;
+    display: flex;
+    flex-direction: column;
+}
+
+p{
+    overflow: hidden;
 }
 
 /* Calender header */
