--- a/resources/sass/main.scss
+++ b/resources/sass/main.scss
@@ -184,8 +184,11 @@ div#status-legend {
     margin-top: -3px;
 }
 
-/* nav */
+.content-wrapper {
+    margin: 10em 2em 4em 2em;
+    position: relative;
 
+}
 
 
 
