--- a/resources/sass/main.scss
+++ b/resources/sass/main.scss
@@ -1,7 +1,15 @@
 @import "variables";
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
+@import "primeicons/primeicons.css";
+@layer tailwind-base, primevue, tailwind-utilities;
+
+@layer tailwind-base {
+    @tailwind base;
+}
+
+@layer tailwind-utilities {
+    @tailwind components;
+    @tailwind utilities;
+}
 
 * {
     outline: 0 #336699 solid;
