--- a/resources/sass/variables.scss
+++ b/resources/sass/variables.scss
@@ -1,10 +1,10 @@
 // Status Colors
-$status-reservation: #00A6B3;
-$status-booking: #8F13FC;
-$status-user-reservation: #B2CCE5;
-$status-user-to-verify: #47CB3F;
-$status-user-booking: #FF8000;
-$status-block: #CE1E17;
+$status-reservation: #00a6b3;
+$status-booking: #8f13fc;
+$status-user-reservation: #b2cce5;
+$status-user-to-verify: #47cb3f;
+$status-user-booking: #ff8000;
+$status-block: #ce1e17;
 $status-closing: #939393;
 
 /*
