--- a/resources/sass/main.scss
+++ b/resources/sass/main.scss
@@ -19,7 +19,7 @@
 
 // Mainly for debug and development
 * {
-    outline: 1px #336699 dashed;
+    outline: 0 #336699 dashed;
 }
 
 main {
@@ -36,9 +36,7 @@ main.dark-mode {
     #sidebar {
         @apply bg-black;
     }
-
 }
-
 
 div#status-legend {
     .reservation {
